Add Hakka link styling

--- a/experimental.html
+++ b/experimental.html
@@ -96,11 +96,31 @@
             </span>
           </div>
           <template>
-            <h2>Car Ads Title</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quis in, cumque optio perferendis laudantium natus, est nulla reprehenderit sequi tempore officia earum! Adipisci error ab officiis et. Doloribus perferendis delectus deserunt, atque quos asperiores ex debitis illum libero neque!</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores numquam nisi earum consequuntur molestiae harum minima recusandae dolor modi libero perferendis nobis soluta neque, at et quidem eveniet animi iure amet ipsum distinctio mollitia aperiam quas quo? Corrupti, esse nesciunt.</p>
-            <h3>Sample Subtitle</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ipsa sint tempora nihil cumque dolorem ab voluptatibus, molestiae voluptatem eligendi laborum sunt error aut dolore provident perferendis excepturi dignissimos ea quam reprehenderit. Quia, mollitia repellat quas neque illum sed ducimus?</p>
+            <h2>Audi</h2>
+            <i>(30-second radio ad)</i>
+            <p>Always innovative and stylish, Audi is the epitome of luxury on four wheels and one of the most inspiring companies in the
+              world.</p>
+            <p>For years they’ve continued to express their support toward Taiwan’s international community by sponsoring the ICRT-ECCT
+              International Charity Golf Cup, taking place at the Kuan Hsi Royal Golf and Country Club in Hsinchu on April 14th.</p>
+            <p>Thanks to Audi’s generous contribution and participation, the Community Services Center will be able to continue its work in Taiwan.</p>
+            <h2>BMW</h2>
+            <i>DJ Liners: These ads were often read on-air by the DJ.</i>
+            <h3>BMW 520i</h3>
+            <p>The wait is almost over! The all-new 2015 BMW 520i is a premium mid-sized car that’s big on performance. Pre-order yours by the end of September and receive exclusive gifts! Visit your nearest BMW dealership for more info.</p>
+            <h3>BMW 2 Series</h3>
+            <p>The all new BMW 2 series Active Tourer is a luxury sports utility crossover that’s roomy on the inside, and compact on the outside. Whether it’s for work or play, you can use it for all occasions. Visit any BMW dealership this weekend and test out this one of a kind car. For more detail, visit BMW’s website.</p>
+            <h3>BMW 3 Series</h3>
+            <p>The 2017 BWM 3 Series is the latest in automotive innovation. With BMW’s Connected Drive and intelligent GPS system, not to mention its anti-collision technology and blind spot warning system, you’ll have one of the safest drives of your life.</p>
+            <p>This month when you buy the all-new 2017 BMW 3 Series, you can enjoy low monthly payments or a low down payment. Plus, the first 100 vehicles sold will receive a year of type B insurance for free! For more info, visit your nearest BMW dealer.</p>
+            <h2>Ford</h2>
+            <i>DJ Liner: This ad, featuring a free event hosted by Ford, was read on-air by the DJ.</i>
+            <p>Ford’s Driving Skills for Life provides real experience for drivers, and registration for the program is now open! This year, Ford, ICRT and the National Road Traffic Safety Commission have joined together to provide a series of road safety tips and practical driving courses for family, as well as driving concepts for children’s safety. The program is free. Space is limited, so hurry and sign up online. For more information, visit ICRT’s Event page.</p>
+            <h2>Infiniti</h2>
+            <i>9-second bumper used after traffic reports.</i>
+            <p>Stay on top of the latest traffic conditions with ICRT and INFINITI. Keeping you inspired, elevated, and driven. INFINITI, EMPOWER THE DRIVE.</p>
+            <h2>Jaguar</h2>
+            <i>DJ Liner: Ad read on-air by the DJ.</i>
+            <p>Fast, sleek and stylish… Jaguar is the UK’s top selling luxury sports car. Get the all new XF luxury 4-door sedan with zero interest, and receive an electric sunroof for your vehicle. Please visit your nearest Jaguar dealer for details.</p>
           </template>
         </li>
         <li>
@@ -140,15 +160,22 @@
             </span>
           </div>
           <template>
-            <h2>Hakka Sample Title</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum non itaque quia esse corporis! Laboriosam obcaecati sunt nostrum ea voluptates. Magnam quibusdam doloribus quisquam magni! Sapiente deleniti doloremque officiis a pariatur eius magnam voluptatem consequatur, cumque, inventore, corporis distinctio illum.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis voluptatum illo doloremque tempore beatae nemo optio voluptatem culpa praesentium voluptatibus aliquid ullam qui dolorum sint eos aspernatur, rerum eum dignissimos omnis. Dignissimos quidem recusandae est ipsum asperiores vero voluptates libero!</p>
-            <h3>Hakka Subtitle</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur blanditiis soluta unde possimus, ea eum sapiente natus nemo asperiores nesciunt nostrum architecto a veniam eos eligendi rem reiciendis fugiat at atque? Aliquid, animi ducimus praesentium illo nesciunt facere velit exercitationem!</p>
+            <a href="https://www.books.com.tw/products/0010758102?fbclid=IwAR3MPOZUD7RUbkCQ1OdUZnoIhruuDW_xGfeN3lleu0Yw2PGhbT4NZHnp1ZY">We Love Hakka
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M24 0H13.6257V2.24309H21.7569V10.3743H24V0Z" fill="currentColor"/>
+                <path d="M22.7653 1.23474L10.2611 13.7389" stroke="currentColor" stroke-width="2.24309"/>
+                <path d="M10.2611 3.47784H3.36463C1.5064 3.47784 0 4.98424 0 6.84248V20.6354C0 22.4936 1.5064 24 3.36463 24H17.1575C19.0158 24 20.5222 22.4936 20.5222 20.6354V13.7389H18.2791V20.6354C18.2791 21.2548 17.7769 21.7569 17.1575 21.7569H3.36463C2.74522 21.7569 2.24309 21.2548 2.24309 20.6354V6.84248C2.24309 6.22307 2.74522 5.72093 3.36463 5.72093H10.2611V3.47784Z" fill="currentColor"/>
+                </svg>
+            </a>
+            <h3>Published in 2017 (ISBN: 9789860521108, registered in Taiwan)</h3>
+            <p>Below are two excerpts from the book, We Love Hakka, which anthologized my scripts. Originally these were scripts for a minute-long radio segment that explored the rich history and culture of the Hakka people, their language, and important landmarks in Taiwan.</p>
+            <h2>Shi-tou / Lion’s Head Mountain</h2>
+            <p>Shi-tou, or Lion’s Head Mountain, gets its name from its unique shape. Resting between Miaoli’s Nanchuang Township and Hsinchu’s Emei Township, the “lion” is five kilometers long from head to tail. The mountain is famous for its many Buddhist shrines with 11 temples scattered along its hillsides.</p>
+            <p>If you’re looking to scale Shitou Mountain, it features two climbing trails. For the easy route, start at the lion’s head and work your way to the Wang-Yue pavilion, a relatively flat route taking about two hours. If you’re looking for a more challenging hike, start at the tail end and work your way up the steep climb to the lion’s head, a three hour hike for more experienced climbers.</p>
+
+            <h2>Toufen, Miaoli / Oriental Beauty Tea</h2>
+            <p>The hilly terrain in Toufen, Miaoli is perfect for Dongfang Meiren tea (Oriental Beauty Tea). Located in a moist mountain range with ample sun and very little pollution, it’s the best area for this aromatic tea to take root. The tea green leafhopper works its magic by biting the leaves and a chemical reaction takes place, which gives the tea its distinct sweet aroma and flavor.</p>
+            <p>Legend has it that the tea got its name from Queen Victoria. The queen loved the tea so much and believed that the women in Eastern paintings got their beauty from drinking it, therefore naming it Oriental Beauty Tea.</p>
           </template>
         </li>
         <li>
