Optimize image sizes

--- a/experimental.html
+++ b/experimental.html
@@ -150,7 +150,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <a href="ckq-we-love-hakka.pdf"><img class="" src="crystal-quimby-1-1.jpg" width="200" alt="orange lanterns"></a>
+            <a href="ckq-we-love-hakka.pdf"><img class="" src="crystal-quimby-1-1.webp" width="200" alt="orange lanterns"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 100px">
@@ -181,7 +181,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="alonso-reyes-1-1.jpg" width="200" alt="a cruise ship sailing">
+            <img class="" src="alonso-reyes-1-1.webp" width="200" alt="a cruise ship sailing">
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
@@ -200,7 +200,12 @@
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
               <h3>International Community Radio Taipei (ICRT) Blog</h3>
               <p>Contributor to ICRT's blog where I wrote movie reviews, technology news, and about events happening in Taiwan.</p>
-              <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/">See sample.</a>
+              <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/" style="text-decoration: none;">
+                <span style="text-decoration: underline;">See sample.</span> <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M24 0H13.6257V2.24309H21.7569V10.3743H24V0Z" fill="currentColor"/>
+                <path d="M22.7653 1.23474L10.2611 13.7389" stroke="currentColor" stroke-width="2.24309"/>
+                <path d="M10.2611 3.47784H3.36463C1.5064 3.47784 0 4.98424 0 6.84248V20.6354C0 22.4936 1.5064 24 3.36463 24H17.1575C19.0158 24 20.5222 22.4936 20.5222 20.6354V13.7389H18.2791V20.6354C18.2791 21.2548 17.7769 21.7569 17.1575 21.7569H3.36463C2.74522 21.7569 2.24309 21.2548 2.24309 20.6354V6.84248C2.24309 6.22307 2.74522 5.72093 3.36463 5.72093H10.2611V3.47784Z" fill="currentColor"/>
+              </svg></a>
             </span>
           </div>
 
@@ -208,7 +213,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <a href="phoenix-dice_product-descriptions.pdf"><img class="" src="dice-b-1-1.jpg" width="200" alt="A close-up shot of blue polyhedral dice"></a>
+            <a href="phoenix-dice_product-descriptions.pdf"><img src="dice-b-1-1.webp" width="200" alt="A close-up shot of blue polyhedral dice"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
