Apply revisions to production index

--- a/index.html
+++ b/index.html
@@ -3,24 +3,34 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:type" content="website"/>
-  <meta property="og:image" content="https://0rangeQ.github.io/crystal-clear-copy-thumbnail2.png"/>
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://0rangeQ.github.io/splash-thumbnail-compressed.webp">
+  <meta property="og:image:width" content="987">
+  <meta property="og:image:height" content="615">
+  <meta name="description" content="Technical writer and marketer. Need words? I'm here to help.">
+  <meta property="og:title" content="Crystal clear copy.">
+  <meta property="og:type" content="website">
+  <meta property="og:image:type" content="image/webp">
+  <meta property="og:image:alt" content="A clear, colorful banner reading 'Make your message crystal clear.'">
+  <meta property="og:url" content="https://crystalclearcopy.net">
+  <meta property="og:description" content="Technical writer and marketer. Need words? I'm here to help.">
+  <meta property="og:site_name" content="Crystal clear copy.">
  
-
-  <link rel="icon" href="crystal-3.svg">
+  <link rel="icon" href="/crystal-3.svg">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,600;1,500&family=Lexend:wght@700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="contemporary.css">
+  <link rel="stylesheet" href="/contemporary.css">
   
-  <script type="module" src="contemporary.js"></script>
+  <script type="module" src="/contemporary.js"></script>
 
   <title>Crystal Quimby - Writer and Marketer</title>
 </head>
 
 <body>
+  <div id="modal-dialog" class="modal"></div>
   <a href="index.html" style="text-decoration:none;">
   <header class="personal-container">
     <div class="header-identity">
@@ -66,7 +76,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <a href="ckq-car-ads.pdf"><img class="" src="george-bakos-1-1.jpg" width="200" alt="city traffic at night"></a>
+            <a href="ckq-car-ads.pdf"><img class="" src="car-photo-90.webp" width="200" alt="a sleek modern sedan"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 90px;">
@@ -75,6 +85,33 @@
               <p><a href="ckq-car-ads.pdf">See sample.</a></p>
             </span>
           </div>
+          <template>
+            <h2>Audi</h2>
+            <i>(30-second radio ad)</i>
+            <p>Always innovative and stylish, Audi is the epitome of luxury on four wheels and one of the most inspiring companies in the
+              world.</p>
+            <p>For years they’ve continued to express their support toward Taiwan’s international community by sponsoring the ICRT-ECCT
+              International Charity Golf Cup, taking place at the Kuan Hsi Royal Golf and Country Club in Hsinchu on April 14th.</p>
+            <p>Thanks to Audi’s generous contribution and participation, the Community Services Center will be able to continue its work in Taiwan.</p>
+            <h2>BMW</h2>
+            <i>DJ Liners: These ads were often read on-air by the DJ.</i>
+            <h3>BMW 520i</h3>
+            <p>The wait is almost over! The all-new 2015 BMW 520i is a premium mid-sized car that’s big on performance. Pre-order yours by the end of September and receive exclusive gifts! Visit your nearest BMW dealership for more info.</p>
+            <h3>BMW 2 Series</h3>
+            <p>The all new BMW 2 series Active Tourer is a luxury sports utility crossover that’s roomy on the inside, and compact on the outside. Whether it’s for work or play, you can use it for all occasions. Visit any BMW dealership this weekend and test out this one of a kind car. For more detail, visit BMW’s website.</p>
+            <h3>BMW 3 Series</h3>
+            <p>The 2017 BWM 3 Series is the latest in automotive innovation. With BMW’s Connected Drive and intelligent GPS system, not to mention its anti-collision technology and blind spot warning system, you’ll have one of the safest drives of your life.</p>
+            <p>This month when you buy the all-new 2017 BMW 3 Series, you can enjoy low monthly payments or a low down payment. Plus, the first 100 vehicles sold will receive a year of type B insurance for free! For more info, visit your nearest BMW dealer.</p>
+            <h2>Ford</h2>
+            <i>DJ Liner: This ad, featuring a free event hosted by Ford, was read on-air by the DJ.</i>
+            <p>Ford’s Driving Skills for Life provides real experience for drivers, and registration for the program is now open! This year, Ford, ICRT and the National Road Traffic Safety Commission have joined together to provide a series of road safety tips and practical driving courses for family, as well as driving concepts for children’s safety. The program is free. Space is limited, so hurry and sign up online. For more information, visit ICRT’s Event page.</p>
+            <h2>Infiniti</h2>
+            <i>9-second bumper used after traffic reports.</i>
+            <p>Stay on top of the latest traffic conditions with ICRT and INFINITI. Keeping you inspired, elevated, and driven. INFINITI, EMPOWER THE DRIVE.</p>
+            <h2>Jaguar</h2>
+            <i>DJ Liner: Ad read on-air by the DJ.</i>
+            <p>Fast, sleek and stylish… Jaguar is the UK’s top selling luxury sports car. Get the all new XF luxury 4-door sedan with zero interest, and receive an electric sunroof for your vehicle. Please visit your nearest Jaguar dealer for details.</p>
+          </template>
         </li>
         <li>
           <div class="illustration-container">
@@ -103,7 +140,7 @@
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <a href="ckq-we-love-hakka.pdf"><img class="" src="crystal-quimby-1-1.jpg" width="200" alt="orange lanterns"></a>
+            <a href="ckq-we-love-hakka.pdf"><img class="" src="crystal-quimby-1-1.webp" width="200" alt="orange lanterns"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 100px">
@@ -112,11 +149,29 @@
               <p><a href="ckq-we-love-hakka.pdf">See sample.</a></p>
             </span>
           </div>
+          <template>
+            <a href="https://www.books.com.tw/products/0010758102?fbclid=IwAR3MPOZUD7RUbkCQ1OdUZnoIhruuDW_xGfeN3lleu0Yw2PGhbT4NZHnp1ZY">We Love Hakka
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M24 0H13.6257V2.24309H21.7569V10.3743H24V0Z" fill="currentColor"/>
+                <path d="M22.7653 1.23474L10.2611 13.7389" stroke="currentColor" stroke-width="2.24309"/>
+                <path d="M10.2611 3.47784H3.36463C1.5064 3.47784 0 4.98424 0 6.84248V20.6354C0 22.4936 1.5064 24 3.36463 24H17.1575C19.0158 24 20.5222 22.4936 20.5222 20.6354V13.7389H18.2791V20.6354C18.2791 21.2548 17.7769 21.7569 17.1575 21.7569H3.36463C2.74522 21.7569 2.24309 21.2548 2.24309 20.6354V6.84248C2.24309 6.22307 2.74522 5.72093 3.36463 5.72093H10.2611V3.47784Z" fill="currentColor"/>
+              </svg>
+            </a>
+            <h3>Published in 2017 (ISBN: 9789860521108, registered in Taiwan)</h3>
+            <p>Below are two excerpts from the book, We Love Hakka, which anthologized my scripts. Originally these were scripts for a minute-long radio segment that explored the rich history and culture of the Hakka people, their language, and important landmarks in Taiwan.</p>
+            <h2>Shi-tou / Lion’s Head Mountain</h2>
+            <p>Shi-tou, or Lion’s Head Mountain, gets its name from its unique shape. Resting between Miaoli’s Nanchuang Township and Hsinchu’s Emei Township, the “lion” is five kilometers long from head to tail. The mountain is famous for its many Buddhist shrines with 11 temples scattered along its hillsides.</p>
+            <p>If you’re looking to scale Shitou Mountain, it features two climbing trails. For the easy route, start at the lion’s head and work your way to the Wang-Yue pavilion, a relatively flat route taking about two hours. If you’re looking for a more challenging hike, start at the tail end and work your way up the steep climb to the lion’s head, a three hour hike for more experienced climbers.</p>
+
+            <h2>Toufen, Miaoli / Oriental Beauty Tea</h2>
+            <p>The hilly terrain in Toufen, Miaoli is perfect for Dongfang Meiren tea (Oriental Beauty Tea). Located in a moist mountain range with ample sun and very little pollution, it’s the best area for this aromatic tea to take root. The tea green leafhopper works its magic by biting the leaves and a chemical reaction takes place, which gives the tea its distinct sweet aroma and flavor.</p>
+            <p>Legend has it that the tea got its name from Queen Victoria. The queen loved the tea so much and believed that the women in Eastern paintings got their beauty from drinking it, therefore naming it Oriental Beauty Tea.</p>
+          </template>
         </li>
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <img class="" src="alonso-reyes-1-1.jpg" width="200" alt="a cruise ship sailing">
+            <img class="" src="alonso-reyes-1-1.webp" width="200" alt="a cruise ship sailing">
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
@@ -135,14 +190,20 @@
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
               <h3>International Community Radio Taipei (ICRT) Blog</h3>
               <p>Contributor to ICRT's blog where I wrote movie reviews, technology news, and about events happening in Taiwan.</p>
-              <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/">See sample.</a>
+              <a href="http://www.icrt.com.tw/wordpress/blog/author/crystalquimby/" style="text-decoration: none;">
+                <span style="text-decoration: underline;">See sample.</span> <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M24 0H13.6257V2.24309H21.7569V10.3743H24V0Z" fill="currentColor"/>
+                <path d="M22.7653 1.23474L10.2611 13.7389" stroke="currentColor" stroke-width="2.24309"/>
+                <path d="M10.2611 3.47784H3.36463C1.5064 3.47784 0 4.98424 0 6.84248V20.6354C0 22.4936 1.5064 24 3.36463 24H17.1575C19.0158 24 20.5222 22.4936 20.5222 20.6354V13.7389H18.2791V20.6354C18.2791 21.2548 17.7769 21.7569 17.1575 21.7569H3.36463C2.74522 21.7569 2.24309 21.2548 2.24309 20.6354V6.84248C2.24309 6.22307 2.74522 5.72093 3.36463 5.72093H10.2611V3.47784Z" fill="currentColor"/>
+              </svg></a>
             </span>
           </div>
+
         </li>
         <li>
           <div class="illustration-container">
             <div class="image-shadow slide-parallax shade-in-shadow"></div>
-            <a href="phoenix-dice_product-descriptions.pdf"><img class="" src="dice-b-1-1.jpg" width="200" alt="A close-up shot of blue polyhedral dice"></a>
+            <a href="phoenix-dice_product-descriptions.pdf"><img src="dice-b-1-1.webp" width="200" alt="A close-up shot of blue polyhedral dice"></a>
           </div>
           <div class="detail-positioning">
             <span class="project-details slide-parallax" style="--parallax-scroll: 130px;">
