--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <meta property="og:image:width" content="987">
   <meta property="og:image:height" content="615">
   <meta name="description" content="Technical writer and marketer. Need words? I'm here to help.">
-  <meta property="og:title" content="Crystal clear copy.">
+  <meta property="og:title" content="Crystal Quimby - Writer and Marketer">
   <meta property="og:type" content="website">
   <meta property="og:image:type" content="image/webp">
   <meta property="og:image:alt" content="A clear, colorful banner reading 'Make your message crystal clear.'">
   <meta property="og:url" content="https://crystalclearcopy.net">
   <meta property="og:description" content="Technical writer and marketer. Need words? I'm here to help.">
-  <meta property="og:site_name" content="Crystal clear copy.">
+  <meta property="og:site_name" content="Crystal Clear Copy">
+  <meta name="theme-color" content="#513975">
  
   <link rel="icon" href="/crystal-3.svg">
 
